# openapi.json
@@ -134,6 +134,10 @@
                           "disabled": {
                             "type": "boolean"
                           },
+                          "stepCount": {
+                            "type": "integer",
+                            "minimum": 1
+                          },
                           "sourceId": {
                             "type": "string"
                           },
@@ -144,7 +148,8 @@
                         "required": [
                           "name",
                           "description",
-                          "disabled"
+                          "disabled",
+                          "stepCount"
                         ]
                       }
                     }
